# knowhub

./: .gitignore  .gitmodules  README.md  astro.config.mjs  package-lock.json  package.json
.chats/: 20260207.md  20260211.md  code-review.md  site.md
.github/workflows/: deploy.yml
fixtures/claude-agent-sdk-python/: test_01_basic_query.py  test_02_query_with_options.py  test_03_system_prompt_preset.py  test_04_interactive_session.py  test_05_multi_turn_conversation.py  test_06_manual_connect_disconnect.py  test_07_tools_control.py  test_08_tool_permission_callback.py  test_09_hook_pretooluse.py  test_10_hook_posttooluse.py  test_11_hook_user_prompt_submit.py  test_12_hook_continue_stop.py  test_13_mcp_tools.py  test_14_mcp_tool_error.py  test_15_custom_agents.py  test_16_structured_output.py  test_17_stream_events.py  test_18_dynamic_permission_mode.py  test_19_dynamic_model_switch.py  test_20_interrupt.py  test_21_max_budget.py  test_22_stderr_callback.py  test_23_error_handling.py  test_24_control_protocol_info.py  test_25_message_types.py  test_26_async_iterable_prompt.py  test_27_receive_messages.py  test_28_env_and_cwd.py  test_29_setting_sources.py  test_30_tool_use_bash.py  (+2 more)
python/: README.md
python/docs/: GIL.md  (+4 more)
rustascent/: .gitignore  Cargo.toml  README.md
rustascent/projects/httpie/: Cargo.toml
rustascent/projects/httpie/fixtures/: test.md
rustascent/projects/httpie/src/: cli.rs  client.rs  main.rs  output.rs
site/: README.md  astro.config.mjs  package-lock.json
specs/: 0003-ai-training-camp.md  0004-site-review.md
src/: content.config.ts
(+228 files in other folders)
